--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ env:
   - TOXENV=py34-django2.0
   - TOXENV=py35-django2.0
   - TOXENV=py36-django2.0
+  - TOXENV=py35-django2.1
+  - TOXENV=py36-django2.1
 matrix:
   include:
   - python: '3.5'
