--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
     freezegun
     pillow
     psycopg2>2.4.1
-    #mysqlclient>=1.3.3
+    mysqlclient>=1.3.3
     coverage>=4.0
     coveralls>=1.0
 
