--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
     clean
-    py{27,34}-django1.8
-    py{27,34,35,36}-django1.11
+    py{34}-django1.8
+    py{34,35,36}-django1.11
     py{34,35,36}-django2.0
     py{35,36}-django2.1
     report
@@ -17,7 +17,6 @@ setenv =
     TOXENV={envname}
 
 basepython =
-    py27: python2.7
     py34: python3.4
     py35: python3.5
     py36: python3.6
@@ -27,12 +26,12 @@ deps =
     django1.11: django>=1.11, <2.0
     django2.0:  django>=2.0, <2.1
     django2.1:  django>=2.1, <2.2
-    py27: mock
     ipdb
     six
     django-yaa-settings
     # Make mysql/pgsql available in case env specifies one
-    model_mommy
+    django1.8: model_mommy==1.5.1
+    django1.11,django2.0,django2.1: model_mommy==2.0.0
     freezegun
     pillow
     psycopg2>2.4.1
