--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -7,19 +7,19 @@
 backcall==0.1.0           # via ipython
 click==6.7                # via pip-tools
 decorator==4.3.0          # via ipython, traitlets
-django-autofixture==0.12.1
-django==1.11.16
+django-autofixture==0.12.1  # via -r requirements.in
+django==1.11.29           # via -r requirements.in
 first==2.0.1              # via pip-tools
-flake8==3.5.0
-ipdb==0.11
+flake8==3.5.0             # via -r requirements.in
+ipdb==0.11                # via -r requirements.in
 ipython-genutils==0.2.0   # via traitlets
-ipython==6.4.0
+ipython==6.4.0            # via -r requirements.in, ipdb
 jedi==0.12.0              # via ipython
 mccabe==0.6.1             # via flake8
 parso==0.2.1              # via jedi
 pexpect==4.6.0            # via ipython
 pickleshare==0.7.4        # via ipython
-pip-tools==2.0.2
+pip-tools==2.0.2          # via -r requirements.in
 prompt-toolkit==1.0.15    # via ipython
 ptyprocess==0.5.2         # via pexpect
 pycodestyle==2.3.1        # via flake8
