Removed support for Django 1.8

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
     clean
-    py{34}-django1.8
     py{34,35,36}-django1.11
     py{34,35,36}-django2.0
     py{35,36}-django2.1
@@ -22,16 +21,13 @@ basepython =
     py36: python3.6
 
 deps =
-    django1.8:  django>=1.8, <1.9
     django1.11: django>=1.11, <2.0
     django2.0:  django>=2.0, <2.1
     django2.1:  django>=2.1, <2.2
     ipdb
     six
     django-yaa-settings
-    # Make mysql/pgsql available in case env specifies one
-    django1.8: model_mommy==1.5.1
-    django1.11,django2.0,django2.1: model_mommy==2.0.0
+    model_bakery
     freezegun
     pillow
     psycopg2>2.4.1
