--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py{34,35,36}-django1.11
     py{34,35,36}-django2.0
     py{35,36}-django2.1
+    py{35,36,37,38}-django2.2
     report
 
 [testenv]
@@ -19,11 +20,14 @@ basepython =
     py34: python3.4
     py35: python3.5
     py36: python3.6
+    py37: python3.7
+    py38: python3.8
 
 deps =
     django1.11: django>=1.11, <2.0
     django2.0:  django>=2.0, <2.1
     django2.1:  django>=2.1, <2.2
+    django2.2:  django>=2.2, <3.0
     ipdb
     six
     django-yaa-settings
