--- a/.travis.yml
+++ b/.travis.yml
@@ -42,14 +42,20 @@ jobs:
       - mysql
   - python: '3.8'
     env: TOXENV=py38-django2.2 DATABASE_ENGINE=pgsql DATABASE_USER=postgres
+    services:
+      - postgresql
   - python: '3.8'
     env: TOXENV=py38-django3.0
   - python: '3.8'
     env: TOXENV=py38-django3.1
   - python: '3.8'
     env: TOXENV=py38-django3.1 DATABASE_ENGINE=mysql DATABASE_USER=travis
+    services:
+      - mysql
   - python: '3.8'
     env: TOXENV=py38-django3.1 DATABASE_ENGINE=pgsql DATABASE_USER=postgres
+    services:
+      - postgresql
 
 deploy:
   provider: pypi
