--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ basepython =
 deps =
     django2.2:  django>=2.2, <3.0
     django3.0:  django>=3.0, <3.1
-    django3.1:  django==3.1rc1
+    django3.1:  django=>3.1, <3.2
     ipdb
     django-yaa-settings>=1.1
     model_bakery
