--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
     clean
-    py{35,36,37,38}-django2.2
-    py{36,37,38}-django3.0
-    py{36,37,38}-django3.1
+    py{35,36,37,38,39}-django2.2
+    py{36,37,38,39}-django3.0
+    py{36,37,38,39}-django3.1
     report
 
 [testenv]
@@ -20,6 +20,7 @@ basepython =
     py36: python3.6
     py37: python3.7
     py38: python3.8
+    py39: python3.9
 
 deps =
     django2.2:  django>=2.2, <3.0
