--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
             django-version: "3.1"
     services:
       postgres:
-        image: postgres:13.1
+        image: postgres:10.8
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -45,8 +45,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml unidecode coverage
-          pip install psycopg2
+          pip install ipdb django-yaa-settings>=1.1 model_bakery freezegun pillow codecov
+          pip install psycopg2>2.4.1
           pip install "django~=${{ matrix.django-version }}.0"
       - name: Test
         run: |
@@ -94,8 +94,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml unidecode coverage
-          pip install mysqlclient
+          pip install ipdb django-yaa-settings>=1.1 model_bakery freezegun pillow codecov
+          pip install psycopg2>2.4.1
+          pip install mysqlclient>=1.3.3
           pip install "django~=${{ matrix.django-version }}.0"
       - name: Test
         run: |
