--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,14 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.5"
-          - "3.6"
-          - "3.7"
-          - "3.8"
+#          - "3.5"
+#          - "3.6"
+#          - "3.7"
+#          - "3.8"
           - "3.9"
         django-version:
-          - "2.2"
-          - "3.0"
+#          - "2.2"
+#          - "3.0"
           - "3.1"
         exclude:
           - python-version: "3.5"
@@ -46,7 +46,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ipdb django-yaa-settings>=1.1 model_bakery freezegun pillow codecov
-          pip install psycopg2>2.4.1
+          pip install psycopg2-binary>2.4.1
           pip install "django~=${{ matrix.django-version }}.0"
       - name: Test
         run: |
@@ -67,15 +67,20 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.5"
-          - "3.6"
-          - "3.7"
-          - "3.8"
+#          - "3.5"
+#          - "3.6"
+#          - "3.7"
+#          - "3.8"
           - "3.9"
         django-version:
-          - "2.2"
-          - "3.0"
+#          - "2.2"
+#          - "3.0"
           - "3.1"
+        exclude:
+          - python-version: "3.5"
+            django-version: "3.0"
+          - python-version: "3.5"
+            django-version: "3.1"
     services:
       mysql:
         image: mysql:8
@@ -95,7 +100,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ipdb django-yaa-settings>=1.1 model_bakery freezegun pillow codecov
-          pip install psycopg2>2.4.1
           pip install mysqlclient>=1.3.3
           pip install "django~=${{ matrix.django-version }}.0"
       - name: Test
