--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -4,33 +4,60 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-backcall==0.2.0           # via ipython
-click==7.0                # via pip-tools
-decorator==4.4.2          # via ipython, traitlets
+backcall==0.2.0
+    # via ipython
+click==7.0
+    # via pip-tools
+decorator==4.4.2
+    # via
+    #   ipython
+    #   traitlets
 django-autofixture==0.12.1
+    # via -r requirements.in
 django==1.11.29
+    # via -r requirements.in
 flake8==3.8.3
-importlib-metadata==1.1.3  # via flake8
+    # via -r requirements.in
 ipdb==0.13.3
-ipython-genutils==0.2.0   # via traitlets
+    # via -r requirements.in
+ipython-genutils==0.2.0
+    # via traitlets
 ipython==6.5.0
-jedi==0.16.0              # via ipython
-mccabe==0.6.1             # via flake8
-parso==0.7.0              # via jedi
-pathlib2==2.3.5           # via importlib-metadata
-pexpect==4.8.0            # via ipython
-pickleshare==0.7.5        # via ipython
+    # via
+    #   -r requirements.in
+    #   ipdb
+jedi==0.16.0
+    # via ipython
+mccabe==0.6.1
+    # via flake8
+parso==0.7.0
+    # via jedi
+pexpect==4.8.0
+    # via ipython
+pickleshare==0.7.5
+    # via ipython
 pip-tools==3.9.0
-prompt-toolkit==1.0.18    # via ipython
-ptyprocess==0.6.0         # via pexpect
-pycodestyle==2.6.0        # via flake8
-pyflakes==2.2.0           # via flake8
-pygments==2.3.1           # via ipython
-pytz==2020.1              # via django
-scandir==1.10.0           # via pathlib2
-simplegeneric==0.8.1      # via ipython
-six==1.15.0               # via pathlib2, pip-tools, prompt-toolkit, traitlets
-traitlets==4.3.3          # via ipython
-typing==3.7.4.3           # via flake8, ipython
-wcwidth==0.2.5            # via prompt-toolkit
-zipp==1.2.0               # via importlib-metadata
+    # via -r requirements.in
+prompt-toolkit==1.0.18
+    # via ipython
+ptyprocess==0.6.0
+    # via pexpect
+pycodestyle==2.6.0
+    # via flake8
+pyflakes==2.2.0
+    # via flake8
+pygments==2.7.4
+    # via ipython
+pytz==2020.1
+    # via django
+simplegeneric==0.8.1
+    # via ipython
+six==1.15.0
+    # via
+    #   pip-tools
+    #   prompt-toolkit
+    #   traitlets
+traitlets==4.3.3
+    # via ipython
+wcwidth==0.2.5
+    # via prompt-toolkit
