--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py{35,36,37,38,39}-django2.2
     py{36,37,38,39}-django3.0
     py{36,37,38,39}-django3.1
+    py{36,37,38,39}-django3.2
     report
 
 [testenv]
@@ -26,6 +27,7 @@ deps =
     django2.2:  django>=2.2, <3.0
     django3.0:  django>=3.0, <3.1
     django3.1:  django>=3.1, <3.2
+    django3.2:  django>=3.2, <3.3
     ipdb
     django-yaa-settings>=1.1
     model_bakery
