--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -17,9 +17,9 @@ decorator==5.0.9
     #   ipdb
     #   ipython
 django==3.2.6
-    # via -r requirements.in
-django-autofixture==0.12.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   model-bakery
 flake8==3.9.2
     # via -r requirements.in
 ipdb==0.13.9
@@ -36,6 +36,8 @@ matplotlib-inline==0.1.2
     # via ipython
 mccabe==0.6.1
     # via flake8
+model-bakery==1.3.2
+    # via -r requirements.in
 parso==0.8.2
     # via jedi
 pep517==0.11.0
