--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
             django-version: "3.0"
           - python-version: "3.5"
             django-version: "3.1"
+          - python-version: "3.5"
+            django-version: "3.2"
     services:
       postgres:
         image: postgres:10.8
@@ -83,6 +85,8 @@ jobs:
             django-version: "3.0"
           - python-version: "3.5"
             django-version: "3.1"
+          - python-version: "3.5"
+            django-version: "3.2"
     services:
       mysql:
         image: mysql:8
